# FP_GPU

./: CMakeLists.txt  launch
RUN/: input.korc  output_read.m
src/: CMakeLists.txt  main.f90
